# rustversi-code

./: .gitignore  Cargo.toml  readme.md
node/: nodever.js  readme.md
src/: field.rs  game.rs  lib.rs  occupytype.rs  point.rs
www/: README.md  index.html  index.js  manifest.json  package-lock.json  package.json  reg.js  sw.js  webpack.config.js
