[package]
name = "rustversi"
version = "0.1.0"
authors = ["Denis <denis@>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
wasm-bindgen = "0.2.63"
# console_error_panic_hook = { version = "0.1.6", optional = true }


[lib]
crate-type = ["cdylib", "rlib"]



#[features]
#default = ["console_error_panic_hook"]
#https://github.com/rustwasm/console_error_panic_hook#readme